Version 1.1.0
Added Javadoc comments to all classes.
Few small bugfixes.